new gh-pages version

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>VideoClientApp</title>
-  <base href="/video-clien-app/">
+  <base href="/video-client/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,5 +11,5 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.31d3b8fd39b751e4538a.bundle.js"></script><script type="text/javascript" src="scripts.89a37924698dbde370d4.bundle.js"></script><script type="text/javascript" src="main.ad9290a7f463dcf2bd31.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.31d3b8fd39b751e4538a.bundle.js"></script><script type="text/javascript" src="scripts.89a37924698dbde370d4.bundle.js"></script><script type="text/javascript" src="main.528a0ea1bff530a7113f.bundle.js"></script></body>
 </html>
