--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading... :) </app-root>
 <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.31d3b8fd39b751e4538a.bundle.js"></script><script type="text/javascript" src="scripts.89a37924698dbde370d4.bundle.js"></script><script type="text/javascript" src="main.393ffbeb0d2ac858e424.bundle.js"></script></body>
 </html>
