--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
+  <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'si,ta', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, multilanguagePage: true}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <app-root>Loading... :) </app-root>
 <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.31d3b8fd39b751e4538a.bundle.js"></script><script type="text/javascript" src="scripts.89a37924698dbde370d4.bundle.js"></script><script type="text/javascript" src="main.393ffbeb0d2ac858e424.bundle.js"></script></body>
 </html>
